// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LogInPage /> styled components Should match the stored <CreateAccountButton/> snapshot 1`] = `
<button
  className="btn btn-primary"
  disabled={false}
  type="button"
/>
`;

exports[`<LogInPage /> styled components Should match the stored <LeftLogin/> snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 20px;
}

<div
  className="c0"
/>
`;

exports[`<LogInPage /> styled components Should match the stored <LinkWrapper/> snapshot 1`] = `
.c0 {
  padding-bottom: 30px;
  font-size: 1.2em;
}

<div
  className="c0"
/>
`;

exports[`<LogInPage /> styled components Should match the stored <LoginWrapper/> snapshot 1`] = `
.c0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 50vw;
  height: 50vh;
  padding: 40px;
  margin-left: 100px;
  border-radius: 5px;
}

<div
  className="c0"
/>
`;

exports[`<LogInPage /> styled components Should match the stored <RightLogin/> snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 50px;
  max-width: 350px;
  min-height: 400px;
}

<div
  className="c0"
/>
`;

exports[`<LogInPage /> styled components Should match the stored <Text/> snapshot 1`] = `
.c0 {
  color: white;
}

<div
  className="c0"
/>
`;

exports[`<LogInPage /> styled components Should match the stored <Title/> snapshot 1`] = `
.c0 {
  font-style: bold;
  padding-bottom: 10px;
  width: 200px;
}

<div
  className="c0"
/>
`;

exports[`<LogInPage /> styled components Should match the stored <Wrapper/> snapshot 1`] = `
.c0 {
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
/>
`;
